--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
         "cheerio": "^1.0.0-rc.12",
         "cors": "^2.8.5",
         "express": "^4.18.2",
+        "sequelize": "^6.35.2",
+        "sqlite3": "^5.1.7",
         "ts-node": "^10.9.2"
     },
     "devDependencies": {
