--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
         "express": "^4.18.2",
         "sequelize": "^6.35.2",
         "sqlite3": "^5.1.7",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "xpath-html": "^1.0.3"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
